# catapult-checkout

./: .clang-format  .clang-tidy  .editorconfig  CMakeLists.txt  CMakePresets.json  README.md
.devcontainer/: devcontainer.json
.devcontainer/windows/: devcontainer.json
.github/workflows/: ci.yml
cmake/: doxygen.cmake  name_generation.cmake  standard_build.cmake
data/: seed.csv
src/catapult/: CMakeLists.txt
src/catapult/exe/: main.cpp
src/catapult/include/: catalogue.h  catalogue_impl.h  command.h  deal.h  deal_impl.h  exception.h  inventory.h  inventory_impl.h  inventory_importer.h  inventory_loader.h  loader.h  observer.h  renderer.h  stock_list_importer.h  super_market.h  super_market_renderer.h  utils.h
src/catapult/src/: catalogue.cpp  catalogue_impl.cpp  deal.cpp  deal_impl.cpp  inventory.cpp  inventory_impl.cpp  inventory_importer.cpp  inventory_loader.cpp  loader.cpp  stock_list_importer.cpp  super_market.cpp  super_market_renderer.cpp
src/catapult/test/: test_catalogue.cpp  test_catalogue_impl.cpp  test_command.cpp  test_deal.cpp  test_deal_impl.cpp  test_inventory.cpp  test_inventory_impl.cpp  test_inventory_loader.cpp  test_loader.cpp  test_observer.cpp  test_stock_list_importer.cpp  test_super_market_renderer.cpp
src/catapult/test/mock/: mock_deal.h  mock_inventory.h  mock_observer.h
